version/0.7/_sources/examples/04-advanced/index.rst.txt


.. _sphx_glr_examples_04-advanced:

.. _advanced_examples:

Advanced and miscellaneous examples
===================================
These examples show advanced use cases to demonstrate the high level of workflow customization.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to expand on selected sectors the mesh and results from a multi-stage cy...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_00-multistage_advanced_options_thumb.png
    :alt: Multi-stage cyclic symmetry using advanced customization

  :ref:`sphx_glr_examples_04-advanced_00-multistage_advanced_options.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-stage cyclic symmetry using advanced customization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to create a harmonic (over frequencies) fields container for an analysis...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_01-solve_harmonic_problem_thumb.png
    :alt: Solve harmonic problem (with damping) using matrix inverse

  :ref:`sphx_glr_examples_04-advanced_01-solve_harmonic_problem.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Solve harmonic problem (with damping) using matrix inverse</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to find the minimum list of surrounding elements for a given node to get...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_02-volume_averaged_stress_thumb.png
    :alt: Average elemental stress on a given volume

  :ref:`sphx_glr_examples_04-advanced_02-volume_averaged_stress.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Average elemental stress on a given volume</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, two DPF servers are started, and a workflow is created with a part on both ser...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_03-exchange_data_between_servers_thumb.png
    :alt: Exchange data between servers

  :ref:`sphx_glr_examples_04-advanced_03-exchange_data_between_servers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exchange data between servers</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to compute the stress nodal components from Gaussian points (integration...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_04-extrapolation_stress_3d_thumb.png
    :alt: Extrapolation method for stress result of a 3D element

  :ref:`sphx_glr_examples_04-advanced_04-extrapolation_stress_3d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extrapolation method for stress result of a 3D element</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to compute the stress nodal components from Gaussian points (integration...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_05-extrapolation_strain_2d_thumb.png
    :alt: Extrapolation method for strain result of a 2D element

  :ref:`sphx_glr_examples_04-advanced_05-extrapolation_strain_2d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extrapolation method for strain result of a 2D element</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to plot a stress gradient normal to a selected node. Because the example...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_06-stress_gradient_path_thumb.png
    :alt: Stress gradient normal to a defined node

  :ref:`sphx_glr_examples_04-advanced_06-stress_gradient_path.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Stress gradient normal to a defined node</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to load a plugin that is not loaded automatically.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_07-load_plugin_thumb.png
    :alt: Load plugin

  :ref:`sphx_glr_examples_04-advanced_07-load_plugin.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Load plugin</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how you can use PyDPF to postprocess a Mechanical model according to ...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_10-asme_secviii_divtwo_thumb.png
    :alt: Pressure vessel analysis according to an ASME standard

  :ref:`sphx_glr_examples_04-advanced_10-asme_secviii_divtwo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Pressure vessel analysis according to an ASME standard</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to generate and use a result file to calculate the cycles to failure res...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_11-cycles_to_failure_thumb.png
    :alt: Calculate the number of cycles to fatigue failure

  :ref:`sphx_glr_examples_04-advanced_11-cycles_to_failure.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calculate the number of cycles to fatigue failure</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Solvers usually solve analysis with distributed architecture. In this case, one file is written...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_12-read_distributed_files_thumb.png
    :alt: Read results from distributed files

  :ref:`sphx_glr_examples_04-advanced_12-read_distributed_files.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Read results from distributed files</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/04-advanced/00-multistage_advanced_options
   /examples/04-advanced/01-solve_harmonic_problem
   /examples/04-advanced/02-volume_averaged_stress
   /examples/04-advanced/03-exchange_data_between_servers
   /examples/04-advanced/04-extrapolation_stress_3d
   /examples/04-advanced/05-extrapolation_strain_2d
   /examples/04-advanced/06-stress_gradient_path
   /examples/04-advanced/07-load_plugin
   /examples/04-advanced/10-asme_secviii_divtwo
   /examples/04-advanced/11-cycles_to_failure
   /examples/04-advanced/12-read_distributed_files

